--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/v4l4j"/>
+	<classpathentry kind="lib" path="lib/pi4j-1.0/lib/pi4j-core.jar" sourcepath="lib/pi4j-1.0/lib/pi4j-core-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
